Closed
Bug 1440413
Opened 8 years ago
Closed 8 years ago
Double-click in the upper part of the content area maximizes/minimized the window
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
RESOLVED
FIXED
mozilla60
Tracking | Status | |
---|---|---|
firefox60 | --- | fixed |
People
(Reporter: mstanke, Assigned: jhorak)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
Mozilla/5.0 (X11; Linux x86_64; rv:60.0) Gecko/20100101 Firefox/60.0 ID:20180222154733
STR:
1. Open Firefox.
2. Double-click in the upper part of the content area (just somewhere below the address bar).
3. The window maximizes/minimizes.
I think this started after bug 1417847. Is that possible, or should I start looking for a regression window?
Reporter | ||
Comment 1•8 years ago
|
||
Comment 2•8 years ago
|
||
Hm, I wonder if we get wrong drag area or we miss some offset here. We may also consider to disable it when drawing to titlebar is disabled.
Assignee | ||
Comment 3•8 years ago
|
||
Thanks for the report, what theme do you use (gtk and mozilla)?
Flags: needinfo?(mstanke)
Comment 4•8 years ago
|
||
I can also reproduce.
GTK2/3 theme is adwaita and Firefox theme is Default.
Comment hidden (mozreview-request) |
Comment 6•8 years ago
|
||
mozreview-review |
Comment on attachment 8954030 [details]
Bug 1440413 - Use original mouse event position when checking for doubleclick on titlebar;
https://reviewboard.mozilla.org/r/223180/#review229126
::: widget/gtk/nsWindow.cpp:2822
(Diff revision 1)
>
> bool defaultPrevented = (eventStatus == nsEventStatus_eConsumeNoDefault);
> // Check if mouse position in titlebar and doubleclick happened to
> // trigger restore/maximize.
> - LayoutDeviceIntPoint pos = event.mRefPoint;
> if (!defaultPrevented
Please also enable the doubleclick maximize only when titlebar rendering is actually enabled.
Attachment #8954030 -
Flags: review?(stransky)
Comment hidden (mozreview-request) |
Reporter | ||
Comment 8•8 years ago
|
||
I have Nightly downloaded from archive.mozilla.org. Theme built-in Dark with compact density. Running Fedora 27 without any theme tweaks, with the exception of "No title bar" extension, but that shouldn't do anything to apps with CSD enabled.
Flags: needinfo?(mstanke)
Comment 9•8 years ago
|
||
mozreview-review |
Comment on attachment 8954030 [details]
Bug 1440413 - Use original mouse event position when checking for doubleclick on titlebar;
https://reviewboard.mozilla.org/r/223180/#review229484
Attachment #8954030 -
Flags: review?(stransky) → review+
Comment 10•8 years ago
|
||
Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/59daaec35ff1
Use original mouse event position when checking for doubleclick on titlebar; r=stransky
![]() |
||
Comment 11•8 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla60
Reporter | ||
Comment 12•8 years ago
|
||
Seems to work fine in Mozilla/5.0 (X11; Linux x86_64; rv:60.0) Gecko/20100101 Firefox/60.0 ID:20180228100110.
Updated•7 years ago
|
Assignee: nobody → jhorak
You need to log in
before you can comment on or make changes to this bug.
Description
•